# GaussSimplify

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: npm.yml
benchmarks/: CMakeLists.txt  simplify_benchmark.cpp
cmakes/: wasm.cmake
include/gs/: simplify.h  simplify_types.h  version.h.in
src/: main.cpp  simplify.cpp  simplify_activate.cpp  simplify_detail.h  simplify_knn.h  simplify_math.h  simplify_merge.cpp  simplify_prune.cpp
src/wasm/: bindings.cpp
tests/: CMakeLists.txt  simplify_tests.cpp
wasm/: .gitignore  .npmignore  README.md  base.ts  build-wasm.js  index.node.ts  index.web.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  types.ts
wasm/example/: .gitignore  output_simplified.ply  output_simplified.splat  output_simplified.spz  package.json  test.js  tiny_gauss.ply
